--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "node-api-postgres",
   "version": "1.0.0",
   "description": "RESTful API with Node.js, Express, and PostgreSQL",
+  "scripts":{
+  "start":"node index.js"
+  },
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
